feat: html + css 작성

--- a/index.html
+++ b/index.html
@@ -12,6 +12,55 @@
 <body>
   <article class="todo-app">
     <h1>Todo App</h1>
+
+    <header class="horizontal">
+      <input class="add-input" placeholder="Add your new todo" />
+      <button class="add-button"></button>
+    </header>
+
+    <ul class="todos">
+      <li class="todo">
+        <p>Buy a new gaming laptop</p>
+        <button class="delete-button"></button>
+      </li>
+      <li class="todo">
+        <p>Complete a previous task</p>
+        <button class="delete-button"></button>
+      </li>
+      <li class="todo">
+        <p>Create video for Youtube</p>
+        <button class="delete-button"></button>
+      </li>
+      <li class="todo">
+        <p>Create a new portfolio site</p>
+        <button class="delete-button"></button>
+      </li>
+      <li class="todo">
+        <p>Go grocery shopping</p>
+        <button class="delete-button"></button>
+      </li>
+      <li class="todo">
+        <p>Finish work report</p>
+        <button class="delete-button"></button>
+      </li>
+      <li class="todo">
+        <p>Create a new portfolio site</p>
+        <button class="delete-button"></button>
+      </li>
+      <li class="todo">
+        <p>Call the dentist to schedule an appointment</p>
+        <button class="delete-button"></button>
+      </li>
+      <li class="todo">
+        <p>Clean the house</p>
+        <button class="delete-button"></button>
+      </li>
+    </ul>
+
+    <footer class="horizontal">
+      <p class="remain-tasks">You have <span class="remain-tasks-count">9</span> pending tasks</p>
+      <button class="clear-button">Clear All</button>
+    </footer>
   </article>
 </body>
 </html>
