--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <script src="./index.js" defer></script>
 </head>
 <body>
-  <article id="todoApp">
+  <article class="todo-app">
     <h1>Todo App</h1>
   </article>
 </body>
