feat: 하드코딩된 요소들 제거

--- a/index.html
+++ b/index.html
@@ -19,46 +19,14 @@
     </header>
 
     <ul class="todos">
-      <li class="todo" title="Buy a new gaming laptop">
-        <p>Buy a new gaming laptop</p>
-        <button class="delete-button"></button>
-      </li>
-      <li class="todo" title="Complete a previous task">
-        <p>Complete a previous task</p>
-        <button class="delete-button"></button>
-      </li>
-      <li class="todo" title="Create video for Youtube">
-        <p>Create video for Youtube</p>
-        <button class="delete-button"></button>
-      </li>
-      <li class="todo" title="Create a new portfolio site">
-        <p>Create a new portfolio site</p>
-        <button class="delete-button"></button>
-      </li>
-      <li class="todo" title="Go grocery shopping">
-        <p>Go grocery shopping</p>
-        <button class="delete-button"></button>
-      </li>
-      <li class="todo" title="Finish work report">
-        <p>Finish work report</p>
-        <button class="delete-button"></button>
-      </li>
-      <li class="todo" title="Create a new portfolio site">
-        <p>Create a new portfolio site</p>
-        <button class="delete-button"></button>
-      </li>
-      <li class="todo" title="Call the dentist to schedule an appointment">
-        <p>Call the dentist to schedule an appointment</p>
-        <button class="delete-button"></button>
-      </li>
-      <li class="todo" title="Clean the house">
-        <p>Clean the house</p>
-        <button class="delete-button"></button>
-      </li>
+<!--      <li class="todo" title="Buy a new gaming laptop">-->
+<!--        <p>Buy a new gaming laptop</p>-->
+<!--        <button class="delete-button"></button>-->
+<!--      </li>-->
     </ul>
 
     <footer class="horizontal">
-      <p class="remain-tasks">You have <span class="remain-tasks-count">9</span> pending tasks</p>
+      <p class="remain-tasks">You have <span class="remain-tasks-count">0</span> pending tasks</p>
       <button class="clear-button">Clear All</button>
     </footer>
   </article>
