--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <script src="./index.js" defer></script>
 </head>
 <body>
-  <article class="todo-app">
+  <article id="todoApp" class="todo-app">
     <h1>Todo App</h1>
 
     <header class="horizontal">
