--- a/index.html
+++ b/index.html
@@ -12,6 +12,10 @@
 <body>
   <article class="todo-app">
     <h1>Todo App</h1>
+    
+    <footer>
+      <p>You have 4 pending tasks</p>
+    </footer>
   </article>
 </body>
 </html>
