--- a/index.html
+++ b/index.html
@@ -12,9 +12,20 @@
 <body>
   <article class="todo-app">
     <h1>Todo App</h1>
-    
+
+    <input />
+
+    <ul>
+      <li>Buy a new gaming laptop</li>
+      <li>Complete a previous task</li>
+      <li>Create video for Youtube</li>
+      <li>Create a new portfolio site</li>
+    </ul>
+
+
     <footer>
       <p>You have 4 pending tasks</p>
+      <button>Clear All</button>
     </footer>
   </article>
 </body>
