--- a/index.html
+++ b/index.html
@@ -13,19 +13,27 @@
   <article class="todo-app">
     <h1>Todo App</h1>
 
-    <input />
+    <input placeholder="Add your new todo"/>
+    <button class="plus-box">+</button>
 
     <ul>
+      <div class="scroll-bar" style="overflow-y: scroll; height:200px;">
       <li>Buy a new gaming laptop</li>
       <li>Complete a previous task</li>
       <li>Create video for Youtube</li>
       <li>Create a new portfolio site</li>
+      <li>Go grocery shopping</li>
+      <li>Finish work report</li>
+      <li>Create a new portfolio site</li>
+      <li>Call the dentist to schedule an appointment</li>
+      <li>Clean the house</li>
+    </div>
     </ul>
 
-
+    
     <footer>
-      <p>You have 4 pending tasks</p>
-      <button>Clear All</button>
+      <p>You have 9 pending tasks</p>
+      <button class="clear-all">Clear All</button>
     </footer>
   </article>
 </body>
