--- a/index.html
+++ b/index.html
@@ -10,11 +10,13 @@
   <script src="./index.js" defer></script>
 </head>
 <body>
-  <article class="todo-app">
+  <article  class="todo-app">
     <h1>Todo App</h1>
+    <header class="subtitles-header">
 
     <input placeholder="Add your new todo"/>
-    <button class="plus-box">+</button>
+    <button class="plus-box"></button>
+    </header>
 
     <ul>
       <div class="scroll-bar" style="overflow-y: scroll; height:200px;">
