--- a/index.html
+++ b/index.html
@@ -18,15 +18,34 @@
   </header>
 
     <ul class="todo-app-list">
-      <li class="todo-list"><p>Buy a new gaming laptop</p>
+      <li class="todo-list">
+        <p>Buy a new gaming laptop</p>
         <button class="delete-button"></button>
       </li>
-      <li class="todo-list"><p>Complete a previous task</p></li>
-      <li class="todo-list"><p>Create video for Youtube</p></li>
-      <li class="todo-list"><p>Create a new portfolio site</p></li>
-      <li class="todo-list"><p>Go grocery shopping</p></li>
-      <li class="todo-list"><p>Finish work report</p></li>
-      <li class="todo-list"><p>Create a new portfolio site</p></li>
+
+      <li class="todo-list">
+        <p>Complete a previous task</p>
+      </li>
+
+      <li class="todo-list">
+        <p>Create video for Youtube</p>
+      </li>
+
+      <li class="todo-list">
+        <p>Create a new portfolio site</p>
+      </li>
+
+      <li class="todo-list">
+        <p>Go grocery shopping</p>
+      </li>
+
+      <li class="todo-list">
+        <p>Finish work report</p>
+      </li>
+
+      <li class="todo-list">
+        <p>Create a new portfolio site</p>
+      </li>
 
       <li class="todo-list" title="Call the dentist to schedule an appointment">
         <p>Call the dentist to schedule an appointment</p></li>
@@ -38,8 +57,20 @@
     
     <footer>
       <p>You have 9 pending tasks</p>
+      <button class="clear-button">Clear All
+      </button>
+    </footer> 
+
+<!--    <footer class="horizontal">
+      <p class="remain-tasks">
+        You have
+        <span class="remain-tasks-count">0</span>
+        pending tasks
+      </p>
       <button class="clear-button">Clear All</button>
     </footer>
+-->
+
   </article>
 </body>
 </html>
