--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
 <body>
   <article  class="todo-app">
     <h1>Todo App</h1>
-  <header class="subtitles-header">
-    <input class="plus-input" placeholder="Add your new todo"/>
-    <button class="plus-button"></button>
-  </header>
+    <header class="subtitles-header">
+      <input class="plus-input" placeholder="Add your new todo"/>
+      <button class="plus-button"></button>
+    </header>
 
     <ul class="todo-app-list">
       <li class="todo-list">
@@ -24,52 +24,52 @@
       </li>
 
       <li class="todo-list">
-        <p>Complete a previous task</p>
+
+        <p>Complete a previous task</p><button class="delete-button"></button>
       </li>
 
       <li class="todo-list">
-        <p>Create video for Youtube</p>
+
+        <p>Create video for Youtube</p><button class="delete-button"></button>
       </li>
 
       <li class="todo-list">
-        <p>Create a new portfolio site</p>
+
+        <p>Create a new portfolio site</p><button class="delete-button"></button>
       </li>
 
       <li class="todo-list">
-        <p>Go grocery shopping</p>
+
+        <p>Go grocery shopping</p><button class="delete-button"></button>
       </li>
 
       <li class="todo-list">
-        <p>Finish work report</p>
+
+        <p>Finish work report</p><button class="delete-button"></button>
       </li>
 
       <li class="todo-list">
-        <p>Create a new portfolio site</p>
+
+        <p>Create a new portfolio site</p><button class="delete-button"></button>
       </li>
 
       <li class="todo-list" title="Call the dentist to schedule an appointment">
-        <p>Call the dentist to schedule an appointment</p></li>
 
-      <li class="todo-list"><p>Clean the house</p></li>
+        <p>Call the dentist to schedule an appointment</p><button class="delete-button"></button></li>
+
+
+      <li class="todo-list"><p>Clean the house</p><button class="delete-button"></button></li>
     </div>
     </ul>
 
     <footer>
-      <p>You have 9 pending tasks</p>
-      <button class="clear-button">Clear All
-      </button>
-    </footer> 
-
-<!--    <footer class="horizontal">
       <p class="remain-tasks">
         You have
-        <span class="remain-tasks-count">0</span>
+        <span class="remain-tasks-count">9</span>
         pending tasks
       </p>
       <button class="clear-button">Clear All</button>
     </footer>
--->
-
   </article>
 </body>
 </html>
